<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_management"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_manage" />
    <item
        android:id="@+id/nav_monitoring"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_monitor" />
    <item
        android:id="@+id/nav_gps"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="GPS Config" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/nav_logout" />
</menu>
